# deeper-systems-test

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml  settings.py  udata.json
app/: database.py  nginx.conf  parser.py
app/client/: package-lock.json  package.json  vue.config.js
app/client/src/: App.vue  main.js
app/client/src/api/: config.js
app/client/src/components/: EditUserDialog.vue
app/client/src/plugins/: vuetify.js
app/client/src/router/: index.js
app/client/src/views/: Home.vue  UserDetails.vue  Users.vue
app/docker/: Dockerfile.backend  Dockerfile.frontend  init-db.sh
app/models/: user.py
app/server/: api.py
docker/: Dockerfile.backend  Dockerfile.frontend  init-db.sh
