[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Thalison Fernandes <thalissfernandes99@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.11.2"
python-decouple = "^3.8"
flask = "^3.1.0"
flask-cors = "^5.0.1"


[tool.poetry.group.dev.dependencies]
httpie = "^3.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
